--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "aos": "^2.3.4",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-spinners": "^1.2.2"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
