ft-pixel-tracker

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "firebase": "^11.2.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue3-spinners": "^1.2.2"
